# cursillo/swagger/dist/schema/swagger.json
@@ -1805,6 +1805,47 @@
         ]
       }
     },
+    "/people/{personId}/talkLinks": {
+      "get":{
+        "tags":[
+          "person"
+        ],
+        "summary":"Return person with Id personId.",
+        "description":"",
+        "operationId":"getTalkLinksByPersonId",
+        "consumes":[
+          "application/json"
+        ],
+        "produces":[
+          "application/json"
+        ],
+        "parameters":[
+          {
+            "in":"query",
+            "name":"authorization",
+            "description":"access token",
+            "required":true,
+            "type": "string"
+          },
+          {
+            "in":"path",
+            "name":"personId",
+            "description":"Person Id",
+            "required":true,
+            "type": "integer",
+            "form": "int32"
+          }
+        ],
+        "responses":{
+          "400":{
+            "description":"invalid credentials."
+          }
+        },
+        "security":[
+
+        ]
+      }
+    },
 
     "/parishes": {
       "get":{
